src/tui/app/src/status/snapshots/adam_tui__status__tests__status_snapshot_shows_empty_limits_message.snap
---
source: src/tui/app/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ Adam (v0.0.0)                                                     │
│                                                                       │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date         │
│ information on rate limits and credits                                │
│                                                                       │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                             │
│  Approval:         on-request                                         │
│  Sandbox:          read-only                                          │
│  Agents.md:        <none>                                             │
│  Account:          user@example.com (Unknown)                         │
│                                                                       │
│  Context window:   99% left (750 used / 272K)                         │
│  Limits:           data not available yet                             │
╰───────────────────────────────────────────────────────────────────────╯
